# CppODEsolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ode_solvers.cpp  odesolvers.h  plotter.py  root_finder.cpp  root_finder.h
Google_tests/: CMakeLists.txt  root_finder_test.cpp  solver_tests.cpp
